; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_eth1394.c_ether1394_free_packet.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_eth1394.c_ether1394_free_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_packet = type { i64 }

@TCODE_STREAM_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hpsb_packet*)* @ether1394_free_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ether1394_free_packet(%struct.hpsb_packet* %0) #0 {
  %2 = alloca %struct.hpsb_packet*, align 8
  store %struct.hpsb_packet* %0, %struct.hpsb_packet** %2, align 8
  %3 = load %struct.hpsb_packet*, %struct.hpsb_packet** %2, align 8
  %4 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @TCODE_STREAM_DATA, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.hpsb_packet*, %struct.hpsb_packet** %2, align 8
  %10 = call i32 @hpsb_free_tlabel(%struct.hpsb_packet* %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.hpsb_packet*, %struct.hpsb_packet** %2, align 8
  %13 = call i32 @hpsb_free_packet(%struct.hpsb_packet* %12)
  ret void
}

declare dso_local i32 @hpsb_free_tlabel(%struct.hpsb_packet*) #1

declare dso_local i32 @hpsb_free_packet(%struct.hpsb_packet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
